--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/plugins/qrave_toolbar">
+
         <file alias="BrowseFolder.png">Images/BrowseFolder.png</file>
         <file alias="Help.png">Images/Help.png</file>
         <file alias="NewProject.png">Images/NewProject.png</file>
@@ -8,12 +9,21 @@
         <file alias="RaveAddIn.png">Images/RaveAddIn.png</file>
         <file alias="RaveAddIn_16px.png">Images/RaveAddIn_16px.png</file>
         <file alias="ucProjectExplorer.png">Images/ucProjectExplorer.png</file>
+        
+        
+        <file alias="refresh.png">Images/refresh.png</file>
+        <file alias="tree.png">Images/tree.png</file>
+        <file alias="expand.png">Images/expand.png</file>
+        <file alias="AddToMap.png">Images/AddToMap.png</file>
+        <file alias="metadata.png">Images/metadata.png</file>
+
+
         <!-- Layer icons -->
-        <file alias="layers/Dot.png">Images/layers/Dot.png</file>
-        <file alias="layers/MultiDot.png">Images/layers/MultiDot.png</file>
-        <file alias="layers/Polygon.png">Images/layers/Polygon.png</file>
-        <file alias="layers/Polyline.png">Images/layers/Polyline.png</file>
-        <file alias="layers/Raster.png">Images/layers/Raster.png</file>
+        <file alias="layers/Dot.png">Images/layers/Dot16.png</file>
+        <file alias="layers/MultiDot.png">Images/layers/MultiDot16.png</file>
+        <file alias="layers/Polygon.png">Images/layers/Polygon16.png</file>
+        <file alias="layers/Polyline.png">Images/layers/Polyline16.png</file>
+        <file alias="layers/Raster.png">Images/layers/Raster16.png</file>
 
     </qresource>
 </RCC>
