--- a/src/ui/dock_widget.ui
+++ b/src/ui/dock_widget.ui
@@ -38,8 +38,14 @@
       <property name="showDropIndicator" stdset="0">
        <bool>false</bool>
       </property>
+      <property name="alternatingRowColors">
+       <bool>false</bool>
+      </property>
       <property name="indentation">
        <number>15</number>
+      </property>
+      <property name="sortingEnabled">
+       <bool>false</bool>
       </property>
       <property name="headerHidden">
        <bool>true</bool>
