adding view parsing

--- a/resources.qrc
+++ b/resources.qrc
@@ -12,6 +12,7 @@
         
         
         <file alias="refresh.png">Images/refresh.png</file>
+        <file alias="project_view.png">Images/project_view.png</file>
         <file alias="tree.png">Images/tree.png</file>
         <file alias="expand.png">Images/expand.png</file>
         <file alias="AddToMap.png">Images/AddToMap.png</file>
