slight reworking and symbology

--- a/resources.qrc
+++ b/resources.qrc
@@ -17,6 +17,7 @@
         <file alias="expand.png">Images/expand.png</file>
         <file alias="AddToMap.png">Images/AddToMap.png</file>
         <file alias="metadata.png">Images/metadata.png</file>
+        <file alias="close.png">Images/close.png</file>
 
 
         <!-- Layer icons -->
