--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -15,6 +15,7 @@
         <file alias="AddToMap.png">../Images/add_to_map.svg</file>
         <file alias="metadata.png">../Images/metadata.svg</file>
         <file alias="close.png">../Images/close.svg</file>
+        <file alias="upload_project.png">../Images/upload_project.svg</file>
 
         <file alias="description.svg">../Images/description.svg</file>
         <file alias="draft.svg">../Images/draft.svg</file>
