--- a/src/ui/project_upload_dialog.ui
+++ b/src/ui/project_upload_dialog.ui
@@ -67,6 +67,12 @@
      </item>
      <item>
       <widget class="QLabel" name="projectPathValue">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="font">
         <font>
          <pointsize>13</pointsize>
@@ -356,6 +362,13 @@
     <widget class="QPushButton" name="openWebProjectBtn">
      <property name="text">
       <string>View In Data Exchange</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="errorLable">
+     <property name="text">
+      <string>Error</string>
      </property>
     </widget>
    </item>
