cancellation bug fixed

--- a/src/ui/project_upload_dialog.ui
+++ b/src/ui/project_upload_dialog.ui
@@ -91,7 +91,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Status:</string>
+        <string>Login:</string>
        </property>
       </widget>
      </item>
