--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -7,6 +7,7 @@
         <file alias="open.svg">../Images/open.svg</file>
         <file alias="Options.png">../Images/settings.svg</file>
         <file alias="viewer-icon.svg">../Images/viewer-icon.svg</file>
+        <file alias="data-exchange-icon.svg">../Images/data-exchange-icon.svg</file>
 
         <file alias="refresh.png">../Images/refresh.svg</file>
         <file alias="tree.png">../Images/tree.png</file>
