--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -9,7 +9,8 @@
         <file alias="viewer-icon.svg">../Images/viewer-icon.svg</file>
         <file alias="data-exchange-icon.svg">../Images/data-exchange-icon.svg</file>
         <file alias="bounds">../Images/bounds.svg</file>
-
+        <file alias="tools">../Images/tools.svg</file>
+        
         <file alias="refresh.png">../Images/refresh.svg</file>
         <file alias="tree.png">../Images/tree.png</file>
         <file alias="expand.png">../Images/expand.svg</file>
